# yyAsistant

./: .button_state_manager_enabled  .env.development  .env.production  .gitignore  CONFIG_GUIDE.md  JS_CONFIG_GUIDE.md  Makefile  app.py  app.py.backup  backup_count.txt  backup_manifest.txt  env.example  magic_dash_pro.db  pyproject.toml  pytest.ini  requirements.txt  server.py  simple_test.py  test_390px_fix.html  test_full_layout_390px.html  test_input_area_390px.html  test_mobile_viewport.html  test_new_managers.py  test_unified_buttons.sh  test_voice_call_display_auto.py  yyAsistant.db
callbacks/: login_c.py  realtime_voice_c.py  realtime_voice_callback.py  voice_call_display_c.py  voice_chat_c.py
cleanup/: cleanup_report.md
components/: ai_chat_message_history.py  chat_agent_message.py  chat_feature_hints.py  chat_input_area.py  chat_session_list.py  chat_user_message.py  chat_welcome_message.py  health_record.py  my_info.py  no_title_card.py  preference.py  realtime_voice_chat.py  smart_message_actions.py  user_manage.py
configs/: __init__.py  app_config.py  auth_config.py  base_config.py  database_config.py  layout_config.py  router_config.py  topics_config.json  topics_manager.py  voice_config.js  voice_config.py
docker/: Dockerfile  build.sh
docs/: ALLOW_DUPLICATE_ANALYSIS.md  AUDIO_OPTIMIZATION_SUMMARY.md  AUDIO_QUEUE_OPTIMIZATION.md  AUTO_SCROLL_OPTIMIZATION.md  BUTTON_ISSUES_FIX_REPORT.md  BUTTON_STATE_COMPARISON.md  BUTTON_STATE_FIX_REPORT.md  CALLBACK_MERGE_SUMMARY.md  CALL_CHAIN_ANALYSIS.md  CODE_IMPLEMENTATION_REPORT.md  CRITICAL_BUTTON_FIXES.md  (+44 more)
(+311 files in other folders)
